--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Packages/hammock"]
 	path = Packages/hammock
-	url = https://github.com/danielcrenna/hammock.git
+	url = https://github.com/danielrmz/hammock.git
