Added IParameters interface to abstract the Parameter handling of Latitude from OAuthBase.cs and leave it open for future implementations

--- a/Common/Models/Models.csproj
+++ b/Common/Models/Models.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Google\Common\Error.cs" />
     <Compile Include="Google\Common\ErrorContainer.cs" />
+    <Compile Include="Google\Common\IParameters.cs" />
     <Compile Include="Google\Common\SpecificError.cs" />
     <Compile Include="Google\Latitude\History.cs" />
     <Compile Include="Google\Latitude\Location.cs" />
